// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PassportNumber /> render() should render correctly 1`] = `
<div>
  <WithStyles(EditableTextForm)
    label="Passport Number"
    name="passportNumber"
    onSubmit={[Function]}
    placeholder="Click to specify passport number"
    readOnly={false}
    readOnlyPlaceholder="No passport number"
    value=""
  />
</div>
`;

exports[`<PassportNumber /> render() should render correctly if variant is text field 1`] = `
<div>
  <FormsyInterceptor
    autoFocus={false}
    label="Passport Number"
    name="passportNumber"
    onInterceptValue={[Function]}
    value=""
  />
</div>
`;

exports[`<PassportNumber /> render() should render correctly if variant is text only 1`] = `<div />`;
